cherry-picked a couple of changes/fixes from 'master' before we continue: - no more duplicate sprite+mootools in _install - fixes so _install script will run again - fix for Return Of The Scrollbar in the admin screen

--- a/admin/img/styles/liquid.css
+++ b/admin/img/styles/liquid.css
@@ -1,4 +1,10 @@
-.container {min-width: 950px;width: 80%;margin: 0 auto;overflow: hidden;}
+.container 
+{
+	min-width: 950px;
+	width: 80%;
+	margin: 0 auto;
+	overflow: hidden;
+}
 .block {overflow: hidden;}
 .column {float: left;}
 .last { margin-right: 0; }
